<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="xyz.rigfox.schedule_android.fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/tutor_title"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tutor_disclaimer"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/tutor1"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tutor1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/tutor2"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tutor2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/tutor3"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tutor3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/tutor4"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tutor4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/tutor5"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/tutor6"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/tutor7"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
</ScrollView>
